# ocnn-project

./: SYNTHESIS REPORT HERE  complete_pipeline.cpp  complete_pipeline.h  dynamic_access.cpp  dynamic_access.h  feature_buffer.h  hls_testbench.cpp  minkowski_net.cpp  minkowski_net_14_layer.h  minkowski_testbench.cpp  morton_reorder_buffer.cpp  morton_reorder_buffer.h  ocnn6_net.cpp  ocnn6_net_8_layer.h  ocnn6_testbench.cpp  octree_bitmap.h  octree_constants.h  octree_master.h  run_hls.tcl  run_minkowski.tcl  run_multi_layer.tcl  run_ocnn6.tcl  simple_testbench.cpp  streaming_bitmap_constructor.cpp  streaming_bitmap_constructor.h  systolic_array.cpp  systolic_array.h
documents/: system-overview.aux  system-overview.out  system-overview.tex  system-overview.toc
minkowski_net/: hls.app
minkowski_net/solution1/: solution1.aps  solution1.directive  solution1_data.json
minkowski_net/solution1/impl/misc/drivers/minkowski_net_14_layer_pipeline_v1_0/src/: CMakeLists.txt  xminkowski_net_14_layer_pipeline.h  xminkowski_net_14_layer_pipeline_linux.c  xminkowski_net_14_layer_pipeline_sinit.c
ocnn6_net/: hls.app
ocnn6_net/solution1/: solution1.aps  solution1.directive  solution1_data.json
ocnn_fpga_project/: hls.app
ocnn_fpga_project/solution1/: solution1.aps  solution1.directive
paper/An_FPGA_Accelerator_for_Sparse_3D_Convolution_with_Octree_Compression_and_Morton_Ordered_Memory_Access/: references.bib  sample-sigconf.tex
test-configuration/: configuration-table.csv
test-configuration/minkowskinet/: full-minkowskinet.py
utils/: morton-encoder  morton-encoder.cpp
(+1221 files in other folders)
